repository with transactions

--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -4,3 +4,9 @@ jdbc.dialect=org.hibernate.dialect.SQLServerDialect
 jdbc.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/shoppago;instance=SQLEXPRESS
 jdbc.username=sa
 jdbc.password=river
+
+jdbc2.driverClassName=net.sourceforge.jtds.jdbc.Driver
+jdbc2.dialect=org.hibernate.dialect.SQLServerDialect
+jdbc2.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/mcdonalds;instance=SQLEXPRESS
+jdbc2.username=sa
+jdbc2.password=river
