--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,12 @@
       <artifactId>hibernate-annotations</artifactId>
       <version>3.3.1.GA</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-c3p0</artifactId>
+      <version>3.3.1.GA</version>
+    </dependency>
+    
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
