--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -1,7 +1,7 @@
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.driverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.SQLServerDialect
-jdbc.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/shoppago;instance=SQLEXPRESS
+jdbc.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/shopp;instance=SQLEXPRESS
 jdbc.username=sa
 jdbc.password=river
 
