--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <jetty.version>8.1.8.v20121106</jetty.version>
     <quartz.version>2.2.2</quartz.version>
     <sql-jdbc.version>4.0</sql-jdbc.version>
+    <dbh2.version>1.4.187</dbh2.version>
   </properties>
 
   <dependencies>
@@ -57,13 +58,19 @@
       <version>${spring.version}</version>
     </dependency>
 
+    <dependency> 
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.7.7</version>
+    </dependency>
+
     <!-- Apache Commons FileUpload -->
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
     </dependency>
-   
+
     <!-- Apache Commons IO -->
     <dependency>
       <groupId>commons-io</groupId>
@@ -163,7 +170,7 @@
       <artifactId>hibernate-c3p0</artifactId>
       <version>3.3.1.GA</version>
     </dependency>
-    
+
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
@@ -195,6 +202,15 @@
       <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- H2 DB -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${dbh2.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
