Improve additional creation workflow.

--- a/src/main/webapp/WEB-INF/shopnchek-prod.properties
+++ b/src/main/webapp/WEB-INF/shopnchek-prod.properties
@@ -10,3 +10,5 @@ jdbc2.dialect=org.hibernate.dialect.SQLServerDialect
 jdbc2.databaseurl=jdbc:jtds:sqlserver://server-1:1433/mcdonalds
 jdbc2.username=RWBDSSNC
 jdbc2.password=rwsnc2008Rw
+
+application.url=http://server-1:8080/shopadmin/
