--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -10,3 +10,5 @@ jdbc2.dialect=org.hibernate.dialect.SQLServerDialect
 jdbc2.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/mcdonalds;instance=SQLEXPRESS
 jdbc2.username=sa
 jdbc2.password=river
+
+application.url=http://localhost:8080/
