--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <!-- logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
+      <artifactId>slf4j-log4j12</artifactId>
       <version>${logging.version}</version>
     </dependency>
 
