--- a/src/main/webapp/WEB-INF/shopnchek-prod.properties
+++ b/src/main/webapp/WEB-INF/shopnchek-prod.properties
@@ -1,8 +1,8 @@
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.driverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.SQLServerDialect
-jdbc.databaseurl=jdbc:jtds:sqlserver://server-1:1433/shoppago
-jdbc.username=RWBDSSNC
-jdbc.password=rwsnc2008Rw
+jdbc.databaseurl=jdbc:jtds:sqlserver://localhost:1433/shoppago
+jdbc.username=ShopnChekUsr
+jdbc.password=Shop2019
 
-application.url=http://server-1:8080/shopadmin/
+application.url=http://VM01:8080/shopadmin/
