Encript property files.

--- a/src/main/webapp/WEB-INF/shopnchek-prod.properties
+++ b/src/main/webapp/WEB-INF/shopnchek-prod.properties
@@ -3,6 +3,11 @@ jdbc.driverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.SQLServerDialect
 jdbc.databaseurl=jdbc:jtds:sqlserver://localhost:1433/shoppago
 jdbc.username=ShopnChekUsr
-jdbc.password=Shop2019
+jdbc.password=ENC(OUFUs1JJIL2VoPGj64VwMK0VldJauEDi)
+
+email.host=smtp.office365.com
+email.port=587
+email.pagos.account=pagosshopnchek@shopnchek.com.ar
+email.pagos.pass=ENC(OUFUs1JJIL2VoPGj64VwMK0VldJauEDi)
 
 application.url=http://VM01:8080/shopadmin/
