--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -1,8 +1,15 @@
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.driverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.SQLServerDialect
-jdbc.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/shoppago;instance=SERVER14
+jdbc.databaseurl=jdbc:jtds:sqlserver://MARTIN-HP:1433/shoppago;instance=SQLEXPRESS
 jdbc.username=sa
-jdbc.password=river
+jdbc.password=ENC(YaXKx3s4LfAJyXIXwew16Q==)
+#jdbc.password=river
+#jdbc.password=Shop2019
+
+email.host=smtp.gmail.com
+email.port=587
+email.pagos.account=martinvalletta@gmail.com
+email.pagos.pass=ENC(xOI3Jqf2QHL9LNbVCuw/8nJMGzWDapcd)
 
 application.url=http://localhost:8080/
