--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jasypt</groupId>
+      <artifactId>jasypt-spring3</artifactId>
+      <version>1.9.3</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
