Update Shopmetrics importer to match new file

--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -10,6 +10,7 @@ jdbc.password=ENC(YaXKx3s4LfAJyXIXwew16Q==)
 email.host=smtp.gmail.com
 email.port=587
 email.pagos.account=martinvalletta@gmail.com
-email.pagos.pass=ENC(xOI3Jqf2QHL9LNbVCuw/8nJMGzWDapcd)
+email.pagos.pass=ENC(LVlpmGuKj4in+v4Ugg4uPA==)
+#email.pagos.pass=ENC(xOI3Jqf2QHL9LNbVCuw/8nJMGzWDapcd)
 
 application.url=http://localhost:8080/
