--- a/src/main/webapp/WEB-INF/shopnchek.properties
+++ b/src/main/webapp/WEB-INF/shopnchek.properties
@@ -7,10 +7,9 @@ jdbc.password=ENC(YaXKx3s4LfAJyXIXwew16Q==)
 #jdbc.password=river
 #jdbc.password=Shop2019
 
-email.host=smtp.gmail.com
+email.host=smtp.office365.com
 email.port=587
-email.pagos.account=martinvalletta@gmail.com
-email.pagos.pass=ENC(LVlpmGuKj4in+v4Ugg4uPA==)
-#email.pagos.pass=ENC(xOI3Jqf2QHL9LNbVCuw/8nJMGzWDapcd)
+email.pagos.account=pagosshopnchek@shopnchek2.com.ar
+email.pagos.pass=ENC(SOMQostrmmuogKcznQon3ZcKtUOXlPLE)
 
 application.url=http://localhost:8080/
